        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=36380
        websocket/tests/frame-lengths.html times out on Tiger bot

        https://bugs.webkit.org/show_bug.cgi?id=35041
        websocket/tests/frame-lengths.html / websocket/tests/simple-stress.html fail on Windows bot

        Double the timeout (from 15 seconds to 30 seconds). We can increase it more, if necessary -
        sampling the DRT process on Mac OS X takes much longer anyway, so it's better to avoid
        timing out than to detect it early.

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::setWaitToDump):
        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::waitUntilDone):
        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        * Scripts/run-webkit-tests:



Canonical link: https://commits.webkit.org/47556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56262 268f45cc-cd09-0410-ab3c-d52691b4dbfc