WebKitTools/DumpRenderTree/gtk/LayoutTestControllerGtk.cpp
@@ -315,7 +315,7 @@ static gboolean waitToDumpWatchdogFired(void*)
 
 void LayoutTestController::setWaitToDump(bool waitUntilDone)
 {
-    static const int timeoutSeconds = 15;
+    static const int timeoutSeconds = 30;
 
     m_waitToDump = waitUntilDone;
     if (m_waitToDump && !waitToDumpWatchdog)
